Avoid having scrollbar on main view with 320x480 display (eg: Keon)

--- a/css/x-layout.css
+++ b/css/x-layout.css
@@ -243,7 +243,7 @@ x-layout > [data-type="home"] ul li#button {
 x-layout > [data-type="home"] ul li#button {
   text-align: center;
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
   height: 7rem;
 }
 x-layout > [data-type="home"] ul li.bottom {
